axum-macros/tests/debug_handler/fail/too_many_extractors.stderr
error: Handlers cannot take more than 16 arguments. Use `(a, b): (ExtractorA, ExtractorA)` to further nest extractors
  --> tests/debug_handler/fail/too_many_extractors.rs:6:5
   |
6  | /     e1: Uri,
7  | |     e2: Uri,
8  | |     e3: Uri,
9  | |     e4: Uri,
...  |
21 | |     e16: Uri,
22 | |     e17: Uri,
   | |_____________^
